syntax = "proto3";

package users;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
}

message UserRequest {
  string user_id = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string user_id = 1;
  string username = 2;
  string password = 3;
}
